# Data-Structures-and-Algorithms

./: README.md  gitattributes
untitled/: CMakeLists.txt  gitattributes
untitled/Basics/: Lists.cpp  function_objects.cpp  mod_exp.cpp  sets.cpp
untitled/Basics/BACKTRACKING/: rat_in_a_maze.cpp
untitled/Basics/BINARY_SEARCH/: bs.cpp  capacity_to_ship_packages_within_d_days.cpp  cell_in_a_sorted_array.cpp  first_and_last_occurrence.cpp  median_in_row_wise_sorted_matrix.cpp  next_alphabetical_element.cpp  no_of_times_a_sorted_array_is_rotated.cpp  order_not_known_search.cpp  search_in_sorted_matrix.cpp  searching_in_nearly_sorted_array.cpp
untitled/Basics/BST_CN/: BST.h
untitled/Basics/Binary_Trees_CN/: binary_tree_node.h
untitled/Basics/DP/: count_subsets_sum_with_given_sum.cpp  min_count.cpp  min_steps.cpp  min_sum_partition.cpp  string_ss.cpp  subset_sum.cpp  targest_sum.cpp
untitled/Basics/EXPONENTATION/: matrix_exp.cpp
untitled/Basics/EXP_CONVERSIONS_AGAIN/: infix_to_prefix.cpp
untitled/Basics/EXP_TREE/: exp_tree_impl.cpp
untitled/Basics/FILE_HANDLING/: file_handling.cpp  file_handling_2.cpp  file_handling_FINAL.cpp
untitled/Basics/GRAPHS/: Djikstras.cpp
untitled/Basics/GRAPHS_CN/: Dijikstras.cpp  Prim.cpp  grpahs_use.cpp  output_Dijikstras.txt  output_graphs1.txt  output_kruskal.txt
untitled/Basics/HEAP/: heap.h  heap_main.cpp  heap_use.cpp  output_heap.txt
untitled/Basics/HackerRank/: insert_at_head.cpp  insert_at_tail.cpp
untitled/Basics/LinkedList_CN/: LL_node.h  output_LL.txt
untitled/Basics/RECURSION/: binary_nos_having_more_equal_1s_than_0s_for_all_prefixes.cpp  generate_all_balanced_paranthesis.cpp  josephus_problem.cpp  permutation_with_case_change.cpp  permutation_with_spaces.cpp  power_set.cpp  print_all_ss_of_string.cpp  sort_array.cpp  sort_stack.cpp
untitled/Basics/Recursion/: all_indices.cpp  array_sort.cpp  fib.cpp  find_char_arr_length.cpp  first_index.cpp
untitled/Basics/SLIDING_WINDOW/: max_of_all_subarrays_of_size_k.cpp  max_sum_subarray_size_k.cpp
untitled/Basics/SORTING_ALGORITHMS_AGAIN/: merge_sort.cpp
untitled/Basics/STACK_PROBLEMS/: celebrity.cpp  mah.cpp  ngl.cpp  nsr.cpp  rwt.cpp
untitled/Basics/STL/: hashing.cpp
untitled/Basics/Stack/: stack_using_LL.cpp
untitled/Basics/TBT/: TBT.h
untitled/Basics/Templates/: function_templates.cpp  overloading_templates.cpp  templates.cpp
untitled/Basics/dequeue/: dequeue.cpp
untitled/Basics/graphs/: MST_Prim.cpp  MST_Prim2.cpp  graph.cpp
untitled/Basics/queue/: circular_queue.cpp  queue_using_LL.cpp
untitled/Basics/sliding_window/: max_sum_subarray_size_k.cpp
untitled/DAA/: bellman_ford.cpp  fractional_knapsack_using_greedy.cpp  knapsack_01.cpp  knapsack_01_using_DP.cpp  n_queens.cpp
untitled/DAA_ASSIGNMENTS/: bellman_ford.cpp  exam.cpp  file_handling.cpp  fractional_knapsack_using_greedy.cpp  knapsack_01.cpp  merge_sort.cpp  n_queens.cpp  tsp.cpp
untitled/DM/: DM_lists.cpp  linear_srch.cpp  occurances.cpp
untitled/DSA/BACKTRACKING/: n_queens.cpp  rat_in_a_maze.cpp
untitled/DSA/BINARY_SEARCH/: aggressive_cows.cpp  allocate_min_no_of_pages.cpp  bs.cpp  bs_on_reverse_sorted_array.cpp  capacity_to_ship_packages_within_d_days.cpp  cell_in_a_sorted_array.cpp  count_of_an_element_in_sorted_array.cpp  find_an_element_in_rotated_sorted_array.cpp  find_max_element_in_bitonic_array.cpp  find_nth_root.cpp  first_and_last_occurrence.cpp  floor_in_a_sorted_array.cpp  kth_smallest_element_in_matrix.cpp  median_in_row_wise_sorted_matrix.cpp  min_diff_element_in_sorted_array.cpp  min_element_in_rotated_sorted_array.cpp  next_alphabetical_element.cpp  no_of_times_a_sorted_array_is_rotated.cpp  order_not_known_search.cpp  peak_element.cpp  search_in_sorted_matrix.cpp  searching_in_nearly_sorted_array.cpp  smallest_factorial_no.cpp  ternary_search.cpp  unique_element_in_sorted_array.cpp
untitled/DSA/Binary_Trees_CN/: binary_tree_use.cpp
untitled/DSA/DEQUE/: deque1.cpp  deque2.cpp  deque3.cpp
untitled/DSA/DEQUEUE/: deque2.cpp  dequeue.cpp
untitled/DSA/EXPONENTATION/: matrix_exp.cpp  mod_exp.cpp
untitled/DSA/EXP_CONVERSIONS_AGAIN/: infix_to_postfix.cpp
untitled/DSA/EXP_TREE/: exp_tree.h  output_exp_tree.txt
untitled/DSA/FILE_HANDLING/: file_handling.cpp  file_handling_2.cpp  file_handling_FINAL.cpp
untitled/DSA/GRAPHS/: alien_dictionary.cpp  articulation_point.cpp  bellman_ford.cpp  bfs.cpp  bfs_dfs_connected_graph.cpp  bfs_dfs_disconnected_graph.cpp  bridge_edge_in_graph.cpp  check_bipartite_graph_using_bfs.cpp  check_bipartite_graph_using_dfs.cpp  check_bridge_edge_or_not.cpp  circle_of_strings.cpp  count_paths_from_s_to_d_in_directed_graph.cpp  count_paths_with_exactly_k_edges.cpp  covid19.cpp  covid_spread.cpp  critical_connections.cpp  detect_cycle_in_directed_graph_using_bfs.cpp  detect_cycle_in_directed_graph_using_dfs.cpp  detect_cycle_in_undirected_graph.cpp  dfs.cpp  dfs_using_stack.cpp  dijkstra.cpp  (+54 more)
untitled/DSAL_mock/: header.h  main.cpp
untitled/ROUGH_FILES/: rough1.cpp  rough2.cpp  rough3.cpp  rough4.cpp  rough5.cpp  rough6.cpp
untitled/algorithmic_toolbox/: fibonacci.cpp  fibonacci_again.cpp  greatest_common_number.cpp  last_digit.cpp  least_common_multiple.cpp  sum1.cpp  test.cpp
untitled/arrays_practice/: array1.cpp  array4.cpp  arrays3.cpp
untitled/assignment4_exp_tree/: ExpressionHeader.h  StackHeader.h  TreeExpressionHeader.h  exp_tree_final.cpp
untitled/assignment_1/: main_interface.cpp  studDB.h
untitled/assignment_10/: main.cpp
untitled/assignment_2_stack/: Stack.h  stack_final.cpp  stack_impl.cpp
untitled/assignment_3_queue/: main.cpp  queue.h
untitled/assignment_5_BST/: BST.cpp  BST.h
untitled/assignment_6_TBT/: TBT_FINAL.cpp  output.txt  tbt.h
untitled/assignment_8/: dijk_header.h  dijk_impl.cpp  dijk_main.cpp
untitled/assignment_9_heap_sort/: HEAP.cpp  heap_main.cpp  output.txt
untitled/calculator/: calculator_II.cpp
untitled/others/: matrix.cpp
untitled/queue_again/: queue_final.h  queue_impl.cpp  queue_main.cpp
untitled/stack_assignment/: infix_to_postfix.cpp  linkedlistwithstack.h  stack_impl.cpp
(+561 files in other folders)
